created header, modifying body and adding links tailwind and font awesome

--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Tailwind-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a7b05e6997.js" crossorigin="anonymous"></script>
     <title>Proyecto Ahorradas</title>
 </head>
-<body>
-    
+<body class="bg-[#ebebeb] box-border">
+    <!-- ****** Header ****** -->
+    <header>
+        <!-- Navbar-->
+        <nav class="bg-[#9C9BD2]">
+            <div class="lg:flex lg:justify-between lg:p-2 lg:mx-2">
+                <div class="flex justify-between mr-5">
+                    <!-- Title section and hide and pop up burger menu -->
+                    <a href="" class="p-4">
+                        <h1
+                        class="block margin-5 p-2 rounded-md text-white text-3xl font-medium active:bg-[#fbfbfb] active:text-purple-500 hover:bg-[#fbfbfb] hover:text-purple-500 lg:p-4 lg:text-4xl"
+                        ><i class="fa-solid fa-wallet text-2xl lg:text-4xl"></i> AhorrADAs
+                        </h1>
+                    </a>
+                    <button class="lg:hidden">
+                        <i class="fa-solid fa-bars text-white text-xl"></i>
+                        <i class="fa-solid fa-xmark text-white text-xl hidden"></i>
+                    </button>
+                </div>
+                <!-- Section : Drop-down menu -->
+                <div class="bg-white space-y-1 px-2 pb-3 pt-2 shadow-lg lg:flex lg:items-center lg:bg-[#9C9BD2] lg:shadow-none">
+                    <a
+                    href="#"
+                    class="block mt-1 px-3 py-2 rounded-md text-gray-900 text-base font-medium active:bg-[#fbfbfb] active:text-purple-500 hover:bg-[#fbfbfb] hover:text-purple-500 lg:mr-2 lg:p4 lg:text-white lg:text-lg"
+                    ></i><i class="fa-solid fa-chart-line"></i> Balance</a
+                    >
+                    <a
+                    href="#"
+                    class="block mt-1 px-3 py-2 rounded-md text-gray-900 text-base font-medium active:bg-[#fbfbfb] active:text-purple-500 hover:bg-[#fbfbfb] hover:text-purple-500 lg:mr-2 lg:p4 lg:text-white lg:text-lg"
+                    ><i class="fa-solid fa-tag"></i> Categorias</a
+                    >
+                    <a
+                    href="#"
+                    class="block mt-1 px-3 py-2 rounded-md text-gray-900 text-base font-medium active:bg-[#fbfbfb] active:text-purple-500 hover:bg-[#fbfbfb] hover:text-purple-500 lg:mr-2 lg:p4 lg:text-white lg:text-lg"
+                    ><i class="fa-solid fa-chart-pie"></i> Reportes</a
+                    >
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+
 </body>
 </html>
