--- a/index.html
+++ b/index.html
@@ -52,7 +52,61 @@
         </nav>
     </header>
     <main>
-
+        <!-- Section - "Categorias" -->
+        <section>
+            <div class= "flex-col mx-6 mt-20 px-4 pb-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:ml-[250px] lg:px-10 lg:pt-5">
+                <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Categorías</h2>
+                <section class="flex flex-wrap justify-between w-full align-center">
+                    <p class="p-4 w-full font-bold"> Nombre </p>
+                    <input type="text" class="p-2 ml-2 w-[65%] border border-2 border-[#ebebeb] rounded-lg focus:outline-none focus:border focus:border-2 focus:border-purple-300 lg:w-[85%]">
+                    <button class="p-2 w-[25%] rounded-lg bg-purple-500 text-white lg:w-[10%]">Agregar</button>
+                </section>
+                <div class="flex flex-col text-xs">
+                    <article class="flex justify-between p-4">
+                        <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500"> Comida</p>
+                        <div>
+                            <button class="p-2"><i class="fa-solid fa-pen-to-square text-green-600"></i></button>
+                            <button class="p-2"><i class="fa-solid fa-trash text-red-600"></i></button>
+                        </div>
+                    </article>
+                    <article class="flex justify-between align-center p-4">
+                        <p class=" p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Servicios</p>
+                        <div>
+                        <button class="p-2"><i class="fa-solid fa-pen-to-square text-green-600"></i></button>
+                        <button class="p-2"><i class="fa-solid fa-trash text-red-600"></i></button>
+                    </div>
+                    </article>
+                    <article class="flex justify-between align-center p-4">
+                        <p class=" p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Salidas</p>
+                        <div>
+                        <button class="p-2"><i class="fa-solid fa-pen-to-square text-green-600"></i></button>
+                        <button class="p-2"><i class="fa-solid fa-trash text-red-600"></i></button>
+                    </div>
+                    </article>
+                    <article class="flex justify-between align-center p-4">
+                        <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500 ">Educación</p>
+                        <div>
+                        <button class="p-2"><i class="fa-solid fa-pen-to-square text-green-600"></i></button>
+                        <button class="p-2"><i class="fa-solid fa-trash text-red-600"></i></button>
+                    </div>
+                    </article>
+                    <article class="flex justify-between align-center p-4">
+                        <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Transporte</p>
+                        <div>
+                        <button class="p-2"><i class="fa-solid fa-pen-to-square text-green-600"></i></button>
+                        <button class="p-2 text-red-600"><i class="fa-solid fa-trash text-red-600"></i></button>
+                    </div>
+                    </article>
+                    <article class="flex justify-between align-center p-4">
+                        <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Trabajo</p>
+                        <div>
+                        <button class="p-2"><i class="fa-solid fa-pen-to-square text-green-600"></i></button>
+                        <button class="p-2"><i class="fa-solid fa-trash text-red-600"></i></button>
+                    </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
