--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <script src="https://kit.fontawesome.com/a7b05e6997.js" crossorigin="anonymous"></script>
     <title>Proyecto Ahorradas</title>
+    <link rel="icon" href="./img/saved.ico">
 </head>
 <body class="bg-[#ebebeb] box-border">
     <!-- ****** Header ****** -->
