--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/a7b05e6997.js" crossorigin="anonymous"></script>
     <title>Proyecto Ahorradas</title>
 </head>
-<body class="bg-[#ebebeb] box-border">
+<body class="bg-[#ebebeb] box-border m-0 p-0">
     <!-- ****** Header ****** -->
     <header>
         <!-- Navbar-->
@@ -53,8 +53,8 @@
     </header>
     <main>
         <!-- Section - "Categorias" -->
-        <section>
-            <div class= "flex-col mx-6 mt-20 px-4 pb-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:ml-[250px] lg:px-10 lg:pt-5">
+        <section class="my-20">
+            <div class= "flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
                 <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Categorías</h2>
                 <section class="flex flex-wrap justify-between w-full align-center">
                     <p class="p-4 w-full font-bold"> Nombre </p>
