--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
             </div>
         </section> 
         <!-- Modal Window -->  
-        <div class=" relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-          <div class="fixed inset-0 bg-transparent bg-opacity-75 transition-opacity">
+        <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+          <div class="hidden fixed inset-0 bg-transparent backdrop-blur-sm bg-opacity-75 transition-opacity">
                 <div class="fixed inset-0 z-10 overflow-y-auto">
                     <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
                         <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
