--- a/index.html
+++ b/index.html
@@ -210,62 +210,62 @@
                 <section class="flex flex-wrap justify-between w-full align-center">
                     <p class="p-4 w-full font-bold"> Nombre </p>
                     <input type="text" class="p-2 ml-2 w-[65%] border border-2 border-[#ebebeb] rounded-lg focus:outline-none focus:border focus:border-2 focus:border-purple-300 lg:w-[85%]">
-                    <button class="px-4 py-2 rounded-md bg-purple-500 text-white hover:bg-purple-700 lg:w-[10%]">Agregar</button>
+                    <button id="btn-add-categories" class="px-4 py-2 rounded-md bg-purple-500 text-white hover:bg-purple-700 lg:w-[10%]">Agregar</button>
                 </section>
                 <div class="flex flex-col text-md">
                     <article class="flex justify-between p-4">
                         <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500"> Comida</p>
                         <div>
-                            <button><i class="fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
-                            <button><i class="fa-solid fa-trash text-red-600"></i></button>
+                            <button><i class="btn-edit-categories fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
+                            <button><i class="btn-delete-categories fa-solid fa-trash text-red-600"></i></button>
                         </div>
                     </article>
                     <article class="flex justify-between align-center p-4">
                         <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Servicios</p>
                         <div>
-                        <button><i class="fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
-                        <button><i class="fa-solid fa-trash text-red-600"></i></button>
+                        <button ><i class="btn-edit-categories fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
+                        <button><i class=" btn-delete-categories fa-solid fa-trash text-red-600"></i></button>
                     </div>
                     </article>
                     <article class="flex justify-between align-center p-4">
                         <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Salidas</p>
                         <div>
-                        <button><i class="fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
-                        <button><i class="fa-solid fa-trash text-red-600"></i></button>
+                        <button><i class="btn-edit-categories fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
+                        <button><i class="btn-delete-categories fa-solid fa-trash text-red-600"></i></button>
                     </div>
                     </article>
                     <article class="flex justify-between align-center p-4">
                         <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500 ">Educación</p>
                         <div>
-                        <button><i class="fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
-                        <button><i class="fa-solid fa-trash text-red-600"></i></button>
+                        <button><i class="btn-edit-categories fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
+                        <button><i class="btn-delete-categories fa-solid fa-trash text-red-600"></i></button>
                     </div>
                     </article>
                     <article class="flex justify-between align-center p-4">
                         <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Transporte</p>
                         <div>
-                        <button><i class="fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
-                        <button><i class="fa-solid fa-trash text-red-600"></i></button>
+                        <button><i class="btn-edit-categories fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
+                        <button><i class=" btn-delete-categories fa-solid fa-trash text-red-600"></i></button>
                     </div>
                     </article>
                     <article class="flex justify-between align-center p-4">
                         <p class="p-2 w-fit rounded-lg bg-purple-50 text-purple-500">Trabajo</p>
                         <div>
-                        <button><i class="fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
-                        <button><i class="fa-solid fa-trash text-red-600"></i></button>
+                        <button><i class="btn-edit-categories fa-solid fa-pen-to-square mr-2 text-green-600"></i></button>
+                        <button><i class="btn-delete-categories fa-solid fa-trash text-red-600"></i></button>
                     </div>
                     </article>
                 </div>
             </div>
         </section>
         <!--Card - Edit categories-->
-        <section class="hidden my-20">
+        <section id="edit-categories" class="hidden my-20">
             <form class= "flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
                 <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Editar categoría</h2>
                 <input type="text" class="p-2 ml-2 w-full border border-2 border-[#ebebeb] rounded-lg focus:outline-none focus:border focus:border-2 focus:border-purple-300 w-full">
                 <div class="flex items-end justify-end mt-10">
-                    <button class="px-8 py-2 mr-4 rounded-md bg-neutral-100 hover:bg-[#ebebeb]">Cancelar</button> 
-                    <button class="px-8 py-2 rounded-md bg-purple-500 text-white hover:bg-purple-700 text-white">Agregar</button>
+                    <button id="btn-cancel-add" class="px-8 py-2 mr-4 rounded-md bg-neutral-100 hover:bg-[#ebebeb]">Cancelar</button> 
+                    <button id="btn-confirm-add" class="px-8 py-2 rounded-md bg-purple-500 text-white hover:bg-purple-700 text-white">Agregar</button>
                 </div>
             </form>
         </section>
@@ -345,8 +345,8 @@
             </div>
         </section> 
         <!-- Modal Window -->  
-        <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-          <div class="hidden fixed inset-0 bg-transparent backdrop-blur-sm bg-opacity-75 transition-opacity">
+        <div  id="modal-window" class="hidden relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+          <div class="fixed inset-0 bg-transparent backdrop-blur-sm bg-opacity-75 transition-opacity">
                 <div class="fixed inset-0 z-10 overflow-y-auto">
                     <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
                         <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
@@ -366,8 +366,8 @@
                                 </div>
                             </div>
                             <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
-                                <button type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Eliminar</button>
-                                <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancelar</button>
+                                <button id="modal-delete" type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Eliminar</button>
+                                <button id="modal-cancel" type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancelar</button>
                             </div> 
                         </div>
                     </div>  
