building local storage functions

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </section>
                 <div class="flex items-end justify-end mt-10">
                     <button class="px-8 py-2 mr-4 rounded-md bg-neutral-100 hover:bg-[#ebebeb]">Cancelar</button> 
-                    <button class="px-8 py-2 rounded-md bg-purple-500 hover:bg-purple-700 text-white">Agregar</button>
+                    <button id="btn-add-operations-data" class="px-8 py-2 rounded-md bg-purple-500 hover:bg-purple-700 text-white">Agregar</button>
                     <button class="hidden px-8 py-2 rounded-md bg-purple-500 hover:bg-purple-700 text-white">Editar</button>
                 </div>
             </form>
