--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <!-- Section - Information new operation -->
                 <div id="new-operation" class="mt-4">
                     <table id="table" class="hidden w-full table-fixed border border-purple-100 flex-wrap">           
-                        <tr class="hidden border border-purple-100 md:flex md:justify-between ">
+                        <tr class="border border-purple-100 md:flex md:justify-between ">
                             <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Descripción</th>
                             <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Categoría</th>
                             <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Fecha</th>
@@ -162,7 +162,7 @@
         </section>
         <!-- Card - New operation / Edit Operation -->
         <div id="operations-form" class="hidden lg:my-20">
-            <form class= "flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
+            <form class="flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
                 <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Nueva Operación</h2>
                 <h2 class= "hidden pt-6 pb-10 ml-3 text-4xl font-bold">Editar Operación</h2>
                 <section class="flex flex-wrap">
