--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div>
                     <div class="lg:flex justify-between items-center lg:m-5">
                         <h2 class="pt-6 pb-6 text-gray-900 text-2xl font-bold">Operaciones</h2>
-                        <button id="add-operation" class="px-2 py-2 bg-purple-500 rounded-md text-white hover:bg-purple-700">+ Nueva Operación</button>
+                        <button id="btn-new-operation" class="px-2 py-2 bg-purple-500 rounded-md text-white hover:bg-purple-700">+ Nueva Operación</button>
                     </div>
                     <!-- Section - Any operation -->
                     <div id="any-operation" class="flex items-center justify-center text-gray-600 pb-4">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <!-- Section - Information new operation -->
-                <div id="new-operation" class="mt-4">
+                <div id="new-operation" class="hidden mt-4">
                     <table id="table" class="hidden w-full table-fixed border border-purple-100 flex-wrap">           
                         <tr class="border border-purple-100 md:flex md:justify-between ">
                             <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Descripción</th>
@@ -197,9 +197,9 @@
                     <input type="date" name="date" id="date" class="w-full flex items-start border border-2 border-[#ebebeb] p-2 ml-3 rounded-lg hover:border-neutral-300 focus:outline-none focus:border focus:border-2 focus:border-purple-300">
                 </section>
                 <div class="flex items-end justify-end mt-10">
-                    <button class="px-8 py-2 mr-4 rounded-md bg-neutral-100 hover:bg-[#ebebeb]">Cancelar</button> 
-                    <button id="btn-add-operations-data" class="px-8 py-2 rounded-md bg-purple-500 hover:bg-purple-700 text-white">Agregar</button>
-                    <button class="hidden px-8 py-2 rounded-md bg-purple-500 hover:bg-purple-700 text-white">Editar</button>
+                    <button id="btn-cancel-operation" class="px-8 py-2 mr-4 rounded-md bg-neutral-100 hover:bg-[#ebebeb]">Cancelar</button> 
+                    <button id="btn-add-operation" class="px-8 py-2 rounded-md bg-purple-500 hover:bg-purple-700 text-white">Agregar</button>
+                    <button id="btn-edit-operation" class="hidden px-8 py-2 rounded-md bg-purple-500 hover:bg-purple-700 text-white">Editar</button>
                 </div>
             </form>
         </div>
