modifying render operations, adding show and hide elements

--- a/index.html
+++ b/index.html
@@ -144,15 +144,17 @@
                     </div>
                 </div>
                 <!-- Section - Information new operation -->
-                <div id="new-operation" class="hidden mt-4">
-                    <table id="table" class="hidden w-full table-fixed border border-purple-100 flex-wrap">           
-                        <tr class="border border-purple-100 md:flex md:justify-between ">
-                            <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Descripción</th>
-                            <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Categoría</th>
-                            <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Fecha</th>
-                            <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Monto</th>
-                            <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Acciones</th>
-                        </tr>
+                <div id="new-operation" class="mt-4">
+                    <table id="table" class="w-full table-fixed border border-purple-100 flex-wrap">
+                        <thead >
+                            <tr class="hidden border border-purple-100 md:flex md:justify-between">
+                                <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Descripción</th>
+                                <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Categoría</th>
+                                <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Fecha</th>
+                                <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Monto</th>
+                                <th class="px-4 py-2 md:w-1/5 md:flex md:justify-start">Acciones</th>
+                            </tr>
+                        </thead>           
                         <tbody id="operationsTable">
                             <!--Operations rendered from the localstorage -->
                         </tbody>
